syntax = "proto3";

package notification;

option go_package = "github.com/charmingruby/doris/lib/proto/gen/notification";

import "google/protobuf/timestamp.proto";

enum NotificationType{
    UNSPECIFIED = 0;
    OTP = 1;
};

message OTPContent {
  string code = 1;
};

message Notification {
  string id = 1;
  string to = 2;
  NotificationType type = 3;      
  string recipient_name = 4;
  google.protobuf.Timestamp sent_at = 5;

  oneof content {
    OTPContent otp = 6;
  }
};